[package]
name = "driver-74hc595"
version = "0.1.0"
authors = ["Alex Moon"]
edition = "2021"
description = "An embedded async driver for 74hc595 shift registers."
documentation = "https://docs.rs/driver-74hc595"
repository = "https://github.com/tactile-eng/driver-74hc595"
license = "Apache-2.0"
keywords = ["embedded-hal-driver", "74hc595", "shift-register"]
categories = ["no-std", "embedded", "asynchronous", "hardware-support"]

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

